# tgl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  auto-static-fetch.c  auto-static-print-ds.c  auto-static-store.c  auto-static.c  auto.h  binlog.c  binlog.cpp  constants.h  generate.c  mime-types.cpp  mime.types  mtproto-client.c  mtproto-client.cpp  mtproto-client.h  mtproto-common.c  mtproto-common.cpp  mtproto-common.h  mtproto-utils.cpp  mtproto-utils.h  queries-encrypted.c  queries-encrypted.cpp  queries-encrypted.h  queries.c  queries.cpp  queries.h  structures.c  structures.cpp  structures.h  tg-mime-types.cpp  tg-mime-types.h  tgl-binlog.h  tgl-dc.cpp  tgl-dc.h  tgl-fetch.h  tgl-inner.h  tgl-layout.h  (+36 more)
auto/: append.tl  auto.h  config.h  scheme.tl
crypto/: aes.h  aes_altern.c  aes_altern.cpp  aes_openssl.c  bn.h  bn_altern.c  bn_altern.cpp  bn_openssl.c  bn_openssl.cpp  bn_utils.cpp  err.h  err_altern.c  err_openssl.c  md5.h  md5_altern.c  md5_openssl.c  meta.h  rand.h  rand_altern.c  rand_openssl.c  rsa_pem.h  rsa_pem_altern.c  rsa_pem_openssl.c  rsa_pem_openssl.cpp  sha.h  sha_altern.c  sha_altern.cpp  sha_openssl.c  sha_openssl.cpp  tgl_crypto_md5.h  tgl_crypto_rand.h  tgl_crypto_rsa_pem.h
generate/: gen_constants_h.py  generate.c  generate.sh  tree.h
generator/: generate.c
include/tgl/: tgl.h  tgl_bot.h  tgl_channel.h  tgl_chat.h  tgl_connection_status.h  tgl_crypto_bn.h  tgl_crypto_err.h  tgl_crypto_rand.h  tgl_crypto_sha.h  tgl_dc.h  tgl_document.h  tgl_file_location.h  tgl_log.h  tgl_login_context.h  tgl_message.h  tgl_message_action.h  tgl_message_entity.h  tgl_message_media.h  tgl_mime_type.h  tgl_mtproto_client.h  tgl_net.h  tgl_online_status.h  tgl_online_status_observer.h  tgl_peer_id.h  tgl_photo.h  tgl_privacy_rule.h  tgl_queries.h  tgl_query_api.h  tgl_secret_chat.h  tgl_secure_random.h  tgl_timer.h  tgl_transfer_manager.h  tgl_typing_status.h  tgl_unconfirmed_secret_message.h  tgl_unconfirmed_secret_message_storage.h  tgl_update_callback.h  tgl_user.h  tgl_user_agent.h  tgl_value.h  tgl_webpage.h
include/tgl/impl/: tgl_net_base.h
objc/: Info.plist.in  TplgTGL.podspec  module.modulemap
scripts/: android_build_lib.py  build  build-android  build-ios  build-ios-sdk  build-objc-framework  build_lib.py  generate.py  update
scripts/android/: android.toolchain.cmake
scripts/ios/: Info.plist
src/: bot_info.cpp  bot_info.h  channel.cpp  channel.h  chat.cpp  chat.h  document.cpp  document.h  download_task.cpp  download_task.h  file_location.cpp  file_location.h  login_context.h  message.cpp  message.h  message_entity.cpp  message_entity.h  mime_type.cpp  mtproto-client.cpp  mtproto-client.h  mtproto-common.cpp  mtproto-common.h  mtproto-utils.cpp  mtproto-utils.h  mtproto_client.cpp  mtproto_client.h  mtproto_common.cpp  mtproto_utils.cpp  mtproto_utils.h  peer_id.cpp  peer_id.h  photo.cpp  photo.h  portable_endian.h  queries-encrypted.cpp  queries-encrypted.h  queries.cpp  queries.h  query.h  query_messages_send_encrypted_action.cpp  (+48 more)
src/auto/: append.tl  auto.h  encrypted_scheme.tl  scheme.tl
src/crypto/: crypto_aes.h  crypto_err.h  crypto_md5.h  crypto_rand.h  crypto_rsa_pem.h  crypto_sha.h  tgl_crypto_aes.h  tgl_crypto_bn.h  tgl_crypto_err.h  tgl_crypto_md5.h  tgl_crypto_rand.h  tgl_crypto_rsa_pem.h  tgl_crypto_sha.h
src/net/: tgl_net_base.cpp
src/query/: queries-encrypted.cpp  queries-encrypted.h  queries.cpp  queries.h  query.cpp  query.h  query_add_contacts.h  query_bind_temp_auth_key.h  query_block_or_unblock_user.h  query_channel_get_participant.cpp  query_channel_get_participant.h  query_channels_get_participants.cpp  query_channels_get_participants.h  query_channels_set_about.h  query_check_password.h  query_check_username.h  query_create_chat.cpp  query_create_chat.h  query_delete_contact.h  query_delete_message.h  query_download_file_part.cpp  query_download_file_part.h  query_export_auth.h  query_export_card.h  query_export_chat_link.h  query_get_and_check_password.cpp  query_get_and_check_password.h  query_get_and_set_password.cpp  query_get_and_set_password.h  query_get_blocked_users.cpp  query_get_blocked_users.h  query_get_channel_difference.cpp  query_get_channel_difference.h  query_get_channel_info.cpp  query_get_channel_info.h  query_get_chat_info.cpp  query_get_chat_info.h  query_get_contacts.h  query_get_dialogs.cpp  query_get_dialogs.h  (+68 more)
types/: query_methods.h  tgl_bot.h  tgl_channel.h  tgl_chat.h  tgl_connection_status.h  tgl_file_location.h  tgl_message.h  tgl_message_action.h  tgl_message_entity.h  tgl_message_media.h  tgl_mtproto_client.h  tgl_online_status.h  tgl_online_status_observer.h  tgl_peer_id.h  tgl_rsa_key.h  tgl_secret_chat.h  tgl_typing_status.h  tgl_update_callback.h  tgl_user.h
